--- a/Практические занятия/Занятие 1/1. Задачи на ввод и вывод.ipynb
+++ b/Практические занятия/Занятие 1/1. Задачи на ввод и вывод.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Функции-ввода-и-вывода\" data-toc-modified-id=\"Функции-ввода-и-вывода-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Функции ввода и вывода</a></span><ul class=\"toc-item\"><li><span><a href=\"#Функция-help\" data-toc-modified-id=\"Функция-help-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Функция <code>help</code></a></span></li><li><span><a href=\"#Функция-консольного-ввода-input\" data-toc-modified-id=\"Функция-консольного-ввода-input-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Функция консольного ввода <code>input</code></a></span></li><li><span><a href=\"#Функция-консольного-вывода-print\" data-toc-modified-id=\"Функция-консольного-вывода-print-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Функция консольного вывода <code>print</code></a></span><ul class=\"toc-item\"><li><span><a href=\"#Параметры-print()\" data-toc-modified-id=\"Параметры-print()-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Параметры print()</a></span></li><li><span><a href=\"#Необязательный-аргумент--sep\" data-toc-modified-id=\"Необязательный-аргумент--sep-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Необязательный аргумент  <code>sep</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--end\" data-toc-modified-id=\"Необязательный-аргумент--end-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Необязательный аргумент  <code>end</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--file\" data-toc-modified-id=\"Необязательный-аргумент--file-1.3.4\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>Необязательный аргумент  <code>file</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--flush\" data-toc-modified-id=\"Необязательный-аргумент--flush-1.3.5\"><span class=\"toc-item-num\">1.3.5&nbsp;&nbsp;</span>Необязательный аргумент  <code>flush</code></a></span></li></ul></li></ul></li><li><span><a href=\"#Задачи\" data-toc-modified-id=\"Задачи-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Задачи</a></span><ul class=\"toc-item\"><li><span><a href=\"#Задача-1.1\" data-toc-modified-id=\"Задача-1.1-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Задача 1.1</a></span></li><li><span><a href=\"#Задача-1.2\" data-toc-modified-id=\"Задача-1.2-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Задача 1.2</a></span></li><li><span><a href=\"#Задача-1.3\" data-toc-modified-id=\"Задача-1.3-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Задача 1.3</a></span></li><li><span><a href=\"#Задача-1.4\" data-toc-modified-id=\"Задача-1.4-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Задача 1.4</a></span></li><li><span><a href=\"#Задача-1.5\" data-toc-modified-id=\"Задача-1.5-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>Задача 1.5</a></span></li><li><span><a href=\"#Задача-1.6\" data-toc-modified-id=\"Задача-1.6-2.6\"><span class=\"toc-item-num\">2.6&nbsp;&nbsp;</span>Задача 1.6</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Функции-ввода-и-вывода\" data-toc-modified-id=\"Функции-ввода-и-вывода-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Функции ввода и вывода</a></span><ul class=\"toc-item\"><li><span><a href=\"#Функция-help\" data-toc-modified-id=\"Функция-help-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Функция <code>help</code></a></span></li><li><span><a href=\"#Функция-консольного-ввода-input\" data-toc-modified-id=\"Функция-консольного-ввода-input-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Функция консольного ввода <code>input</code></a></span></li><li><span><a href=\"#Функция-консольного-вывода-print\" data-toc-modified-id=\"Функция-консольного-вывода-print-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Функция консольного вывода <code>print</code></a></span><ul class=\"toc-item\"><li><span><a href=\"#Параметры-print()\" data-toc-modified-id=\"Параметры-print()-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Параметры print()</a></span></li><li><span><a href=\"#Необязательный-аргумент--sep\" data-toc-modified-id=\"Необязательный-аргумент--sep-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Необязательный аргумент  <code>sep</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--end\" data-toc-modified-id=\"Необязательный-аргумент--end-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Необязательный аргумент  <code>end</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--file\" data-toc-modified-id=\"Необязательный-аргумент--file-1.3.4\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>Необязательный аргумент  <code>file</code></a></span></li><li><span><a href=\"#Необязательный-аргумент--flush\" data-toc-modified-id=\"Необязательный-аргумент--flush-1.3.5\"><span class=\"toc-item-num\">1.3.5&nbsp;&nbsp;</span>Необязательный аргумент  <code>flush</code></a></span></li></ul></li></ul></li><li><span><a href=\"#Задачи\" data-toc-modified-id=\"Задачи-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Задачи</a></span><ul class=\"toc-item\"><li><span><a href=\"#Задача-1.1-$\\star$\" data-toc-modified-id=\"Задача-1.1-$\\star$-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Задача 1.1 $\\star$</a></span></li><li><span><a href=\"#Задача-1.2\" data-toc-modified-id=\"Задача-1.2-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Задача 1.2</a></span></li><li><span><a href=\"#Задача-1.3-$\\star$\" data-toc-modified-id=\"Задача-1.3-$\\star$-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Задача 1.3 $\\star$</a></span></li><li><span><a href=\"#Задача-1.4-$\\star$\" data-toc-modified-id=\"Задача-1.4-$\\star$-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Задача 1.4 $\\star$</a></span></li><li><span><a href=\"#Задача-1.5\" data-toc-modified-id=\"Задача-1.5-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>Задача 1.5</a></span></li><li><span><a href=\"#Задача-1.6-$\\star$\" data-toc-modified-id=\"Задача-1.6-$\\star$-2.6\"><span class=\"toc-item-num\">2.6&nbsp;&nbsp;</span>Задача 1.6 $\\star$</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задача 1.1\n",
+    "## Задача 1.1 $\\star$\n",
     "Напишите программу, которая выводит на экран текст \"Hello, world!\" без кавычек."
    ]
   },
@@ -377,6 +377,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +405,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задача 1.3\n",
+    "***\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 1.3 $\\star$\n",
     "Напишите программу, которая выводит цифру \" 8 \"  с помощью символов \" & \" (\n",
     "```\n",
     "&&&&&&&&&&\n",
@@ -424,7 +440,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задача 1.4\n",
+    "***\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 1.4 $\\star$\n",
     "\n",
     "Рассмотрим несколько первых членов последовательности Фибоначчи:\n",
     "\n",
@@ -448,6 +472,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Задача 1.5\n",
     "\n",
     "Вызовите справку по строковому типу данных ```str```."
@@ -464,7 +496,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задача 1.6\n",
+    "***\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 1.6 $\\star$\n",
     "\n",
     "Введите с консоли:\n",
     "* Строку\n",
@@ -480,6 +520,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "***"
+   ]
   }
  ],
  "metadata": {
