--- a/Практические занятия/Занятие 2/2. Задачи на арифметические операторы.ipynb
+++ b/Практические занятия/Занятие 2/2. Задачи на арифметические операторы.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Задачи-на-арифметические-операторы\" data-toc-modified-id=\"Задачи-на-арифметические-операторы-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Задачи на арифметические операторы</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Обозначения-операторов\" data-toc-modified-id=\"Обозначения-операторов-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>Обозначения операторов</a></span></li><li><span><a href=\"#Приоретет-операторов\" data-toc-modified-id=\"Приоретет-операторов-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Приоретет операторов</a></span></li></ul></li><li><span><a href=\"#Задача-2.0\" data-toc-modified-id=\"Задача-2.0-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Задача 2.0</a></span></li><li><span><a href=\"#Задача-2.1\" data-toc-modified-id=\"Задача-2.1-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Задача 2.1</a></span></li><li><span><a href=\"#Задача-2.3\" data-toc-modified-id=\"Задача-2.3-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Задача 2.3</a></span></li><li><span><a href=\"#Задача-2.4\" data-toc-modified-id=\"Задача-2.4-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Задача 2.4</a></span></li><li><span><a href=\"#Задача-2.5\" data-toc-modified-id=\"Задача-2.5-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Задача 2.5</a></span></li><li><span><a href=\"#Задача-2.6\" data-toc-modified-id=\"Задача-2.6-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Задача 2.6</a></span></li><li><span><a href=\"#Задача-2.7\" data-toc-modified-id=\"Задача-2.7-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Задача 2.7</a></span></li><li><span><a href=\"#Задача-2.8\" data-toc-modified-id=\"Задача-2.8-1.8\"><span class=\"toc-item-num\">1.8&nbsp;&nbsp;</span>Задача 2.8</a></span></li><li><span><a href=\"#Задача-2.9\" data-toc-modified-id=\"Задача-2.9-1.9\"><span class=\"toc-item-num\">1.9&nbsp;&nbsp;</span>Задача 2.9</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Задачи-на-арифметические-операторы\" data-toc-modified-id=\"Задачи-на-арифметические-операторы-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Задачи на арифметические операторы</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Обозначения-операторов\" data-toc-modified-id=\"Обозначения-операторов-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>Обозначения операторов</a></span></li><li><span><a href=\"#Приоретет-операторов\" data-toc-modified-id=\"Приоретет-операторов-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Приоретет операторов</a></span></li></ul></li><li><span><a href=\"#Задача-2.0\" data-toc-modified-id=\"Задача-2.0-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Задача 2.0</a></span></li><li><span><a href=\"#Задача-2.1-$\\star$\" data-toc-modified-id=\"Задача-2.1-$\\star$-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Задача 2.1 $\\star$</a></span></li><li><span><a href=\"#Задача-2.3-$\\star$\" data-toc-modified-id=\"Задача-2.3-$\\star$-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Задача 2.3 $\\star$</a></span></li><li><span><a href=\"#Задача-2.4-$\\star$\" data-toc-modified-id=\"Задача-2.4-$\\star$-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Задача 2.4 $\\star$</a></span></li><li><span><a href=\"#Задача-2.5-$\\star$\" data-toc-modified-id=\"Задача-2.5-$\\star$-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Задача 2.5 $\\star$</a></span></li><li><span><a href=\"#Задача-2.6-$\\star$\" data-toc-modified-id=\"Задача-2.6-$\\star$-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Задача 2.6 $\\star$</a></span></li><li><span><a href=\"#Задача-2.7\" data-toc-modified-id=\"Задача-2.7-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Задача 2.7</a></span></li><li><span><a href=\"#Задача-2.8\" data-toc-modified-id=\"Задача-2.8-1.8\"><span class=\"toc-item-num\">1.8&nbsp;&nbsp;</span>Задача 2.8</a></span></li><li><span><a href=\"#Задача-2.9\" data-toc-modified-id=\"Задача-2.9-1.9\"><span class=\"toc-item-num\">1.9&nbsp;&nbsp;</span>Задача 2.9</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "source": [
     "***\n",
     "***\n",
-    "## Задача 2.1\n",
+    "## Задача 2.1 $\\star$\n",
     "\n",
     "С консоли считывается произволное **целое** число **z**.\n",
     "\n",
@@ -101,7 +101,7 @@
    "source": [
     "***\n",
     "***\n",
-    "## Задача 2.3\n",
+    "## Задача 2.3 $\\star$\n",
     "\n",
     "С консоли считывается двузначное **целое** число **z**. \n",
     "\n",
@@ -129,7 +129,7 @@
    "source": [
     "***\n",
     "***\n",
-    "## Задача 2.4\n",
+    "## Задача 2.4 $\\star$\n",
     "\n",
     "С консоли считывется **целое** число **z**. \n",
     "\n",
@@ -149,7 +149,7 @@
    "source": [
     "***\n",
     "***\n",
-    "## Задача 2.5\n",
+    "## Задача 2.5 $\\star$\n",
     "\n",
     "\n",
     "С консоли считывается угловой отсчет в виде дробного числа по шаблону вида - **ГГ.ММСС**\n",
@@ -175,7 +175,7 @@
     "***\n",
     "***\n",
     "\n",
-    "## Задача 2.6\n",
+    "## Задача 2.6 $\\star$\n",
     "\n",
     "С консоли считывется угловой отсчет **в виде десятичного числа**.\n",
     "\n",
