--- a/Лекции/ЛК 4. Функции.ipynb
+++ b/Лекции/ЛК 4. Функции.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Функции\" data-toc-modified-id=\"Функции-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Именные-функции,-инструкция-def\" data-toc-modified-id=\"Именные-функции,-инструкция-def-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Именные функции, инструкция <code>def</code></a></span></li><li><span><a href=\"#Аргументы-функции\" data-toc-modified-id=\"Аргументы-функции-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Аргументы функции</a></span></li><li><span><a href=\"#Вложенные-функции\" data-toc-modified-id=\"Вложенные-функции-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Вложенные функции</a></span></li><li><span><a href=\"#Документирование-функции\" data-toc-modified-id=\"Документирование-функции-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Документирование функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Методы,-функции-и-атрибуты,-связанные-с-объектами-функции\" data-toc-modified-id=\"Методы,-функции-и-атрибуты,-связанные-с-объектами-функции-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Методы, функции и атрибуты, связанные с объектами функции</a></span></li></ul></li><li><span><a href=\"#Рекурсивные-функции\" data-toc-modified-id=\"Рекурсивные-функции-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Рекурсивные функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Снежинка-Коха\" data-toc-modified-id=\"Снежинка-Коха-1.5.1\"><span class=\"toc-item-num\">1.5.1&nbsp;&nbsp;</span>Снежинка Коха</a></span></li><li><span><a href=\"#Дракон-Хартера-—-Хейтуэя\" data-toc-modified-id=\"Дракон-Хартера-—-Хейтуэя-1.5.2\"><span class=\"toc-item-num\">1.5.2&nbsp;&nbsp;</span>Дракон Хартера — Хейтуэя</a></span></li></ul></li><li><span><a href=\"#Глобальная-переменная\" data-toc-modified-id=\"Глобальная-переменная-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Глобальная переменная</a></span></li><li><span><a href=\"#Анонимная-функция:-лямбда\" data-toc-modified-id=\"Анонимная-функция:-лямбда-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Анонимная функция: лямбда</a></span><ul class=\"toc-item\"><li><span><a href=\"#Зачем-использовать-лямбда-функции?\" data-toc-modified-id=\"Зачем-использовать-лямбда-функции?-1.7.1\"><span class=\"toc-item-num\">1.7.1&nbsp;&nbsp;</span>Зачем использовать лямбда-функции?</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Функции\" data-toc-modified-id=\"Функции-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Именные-функции,-инструкция-def\" data-toc-modified-id=\"Именные-функции,-инструкция-def-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Именные функции, инструкция <code>def</code></a></span></li><li><span><a href=\"#Аргументы-функции\" data-toc-modified-id=\"Аргументы-функции-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Аргументы функции</a></span></li><li><span><a href=\"#Вложенные-функции\" data-toc-modified-id=\"Вложенные-функции-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Вложенные функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Методы,-функции-и-атрибуты,-связанные-с-объектами-функции\" data-toc-modified-id=\"Методы,-функции-и-атрибуты,-связанные-с-объектами-функции-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Методы, функции и атрибуты, связанные с объектами функции</a></span></li></ul></li><li><span><a href=\"#Рекурсивные-функции\" data-toc-modified-id=\"Рекурсивные-функции-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Рекурсивные функции</a></span><ul class=\"toc-item\"><li><span><a href=\"#Снежинка-Коха\" data-toc-modified-id=\"Снежинка-Коха-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Снежинка Коха</a></span></li><li><span><a href=\"#Дракон-Хартера-—-Хейтуэя\" data-toc-modified-id=\"Дракон-Хартера-—-Хейтуэя-1.4.2\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>Дракон Хартера — Хейтуэя</a></span></li></ul></li><li><span><a href=\"#Глобальная-переменная\" data-toc-modified-id=\"Глобальная-переменная-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Глобальная переменная</a></span></li><li><span><a href=\"#Анонимная-функция:-лямбда\" data-toc-modified-id=\"Анонимная-функция:-лямбда-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Анонимная функция: лямбда</a></span><ul class=\"toc-item\"><li><span><a href=\"#Зачем-использовать-лямбда-функции?\" data-toc-modified-id=\"Зачем-использовать-лямбда-функции?-1.6.1\"><span class=\"toc-item-num\">1.6.1&nbsp;&nbsp;</span>Зачем использовать лямбда-функции?</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -483,60 +483,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "***\n",
-    "\n",
-    "## Документирование функции"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Определим функцию:\n",
-    "\n",
-    "```python\n",
-    "def my_sum(s,y): \n",
-    "    return x + y\n",
-    "```\n",
-    "\n",
-    "Если изучить ее, обнаружатся два скрытых метода (которые начинаются с двух знаков нижнего подчеркивания), среди которых есть ```__doc__```. Он нужен для настройки документации функции. Документация в ```Python``` называется ```docstring``` и может быть объединена с функцией следующим образом:\n",
-    "\n",
-    "```python\n",
-    "def my_sum(x, y):\n",
-    "    \"\"\"Первая срока - заголовок\n",
-    "\n",
-    "    Затем следует необязательная пустая строка и текст \n",
-    "    документации.\n",
-    "    \"\"\"\n",
-    "    return x+y\n",
-    "```\n",
-    "\n",
-    "Команда ```docstring``` должна быть первой инструкцией после объявления функции. Ее потом можно будет извлекать или дополнять:\n",
-    "\n",
-    "```python\n",
-    "print(my_sum.__doc__)\n",
-    "my_sum.__doc__ += \"some additional text\"\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def my_sum(x, y):\n",
-    "    \"\"\"Первая срока - заголовок\n",
-    "\n",
-    "    Затем следует необязательная пустая строка и текст \n",
-    "    документации.\n",
-    "    \"\"\"\n",
-    "    return x+y\n",
-    "\n",
-    "print(my_sum.__doc__)\n",
-    "\n",
-    "my_sum.__doc__ += \"some additional text\"\n",
-    "print(my_sum.__doc__)"
+    "***"
    ]
   },
   {
@@ -826,34 +773,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "***\n",
-    "***\n",
+    "i = 0\n",
     "\n",
-    "## Анонимная функция: лямбда\n",
+    "def increment():\n",
+    "    i += 1\n",
+    "    \n",
+    "print(i)\n",
     "\n",
-    "**Лямбда-функция** — это короткая однострочная функция, которой даже не нужно имя давать. \n",
+    "increment()\n",
     "\n",
-    "Такие выражения содержат лишь одну инструкцию, поэтому, например, ```if```, ```for``` и ```while``` использовать нельзя. \n",
-    "\n",
-    "Их также можно присваивать переменным:\n",
-    "\n",
-    "```python\n",
-    "product = lambda x,y: x*y\n",
-    "```\n",
-    "\n",
-    "В отличие от функций, здесь не используется ключевое слово ```return```. Результат работы и так возвращается.\n",
-    "\n",
-    "С помощью ```type()``` можно проверить тип:\n",
-    "\n",
-    "```python\n",
-    ">>> type(product)\n",
-    "function\n",
-    "```\n",
-    "\n",
-    "На практике эти функции редко используются. Это всего лишь элегантный способ записи, когда она содержит одну инструкцию."
+    "print(i)"
    ]
   },
   {
@@ -862,84 +796,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "power = lambda x=1, y=2: x**y\n",
-    "square = power\n",
-    "square(5.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "power = lambda x,y,pow=2: x**pow + y\n",
-    "[power(x, 2, 3) for x in [0,1,2]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Зачем использовать лямбда-функции?\n",
+    "i = 0\n",
     "\n",
-    "Силу ```lambda-функции``` лучше видно, когда вы используете ее как анонимную функцию внутри другой функции. Скажем, у вас есть определение функции, которое принимает один аргумент, и этот аргумент будет умножен на неизвестное число:\n",
+    "def increment():\n",
+    "    global i\n",
+    "    i += 1\n",
+    "    \n",
+    "print(i)\n",
     "\n",
-    "```python\n",
-    "def myfunc(n):  \n",
-    "    return lambda a: a * n\n",
-    "```\n",
+    "increment()\n",
     "\n",
-    "Используйте это определение функции для создания функции, которая всегда удваивает число, которое вы отправляете:\n",
-    "\n",
-    "```python\n",
-    "def myfunc(n):\n",
-    "    return lambda a: a * n\n",
-    "\n",
-    "mydoubler = myfunc(2)\n",
-    "print(mydoubler(11))\n",
-    "```\n",
-    "\n",
-    "Вывод:\n",
-    "```\n",
-    "22\n",
-    "```\n",
-    "\n",
-    "Или используйте то же самое определение функции, чтобы сделать функцию, которая всегда утраивает число:\n",
-    "\n",
-    "```python\n",
-    "def myfunc(n):\n",
-    "    return lambda a: a * n\n",
-    "\n",
-    "mytripler = myfunc(3)\n",
-    "print(mytripler(11))\n",
-    "```\n",
-    "Вывод:\n",
-    "```\n",
-    "33\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myfunc(n):\n",
-    "    return lambda  a: a * n\n",
-    "\n",
-    "mydoubler = myfunc(2)\n",
-    "mytripler = myfunc(3)\n",
-    "print(mydoubler(11))\n",
-    "print(mytripler(11))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Используйте ```lambda-функцию```, когда анонимная функция нужна в определенной части кода, но не по всем скрипте."
+    "print(i)"
    ]
   }
  ],
