--- a/Практические занятия/Занятие 9/11. Задачи на функции и numpy.ipynb
+++ b/Практические занятия/Занятие 9/11. Задачи на функции и numpy.ipynb
@@ -46,21 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['AGLT', 'BNTA', 'FAG2', 'GPRB', 'GTCN', 'GU29', 'KRNS', 'KRV2', 'LMNS', 'MCHR', 'MRL2', 'MS25', 'NZYA', 'ORLV', 'PRVM', 'PULK', 'RSCH', 'SBOR', 'SL55', 'SRTV', 'SVRS', 'TCNP', 'TSN3', 'UGTS', 'VLS2', 'VSVL'])\n",
-      "************************************\n",
-      "'AGLT' =  {'rtcm_id': 1015, 'position': {'X_64': 124427.953, 'Y_64': 110155.593, 'Z_64': 68.591}}\n",
-      "************************************\n",
-      "'AGLT' position =  {'X_64': 124427.953, 'Y_64': 110155.593, 'Z_64': 68.591}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -105,21 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['53VN', '60V2', 'AGLT', 'ALHV', 'APAT', 'BBCH', 'BBVO', 'BJNC', 'BLGE', 'BLGR', 'BLKS', 'BLMR', 'BLNS', 'BNTA', 'BRV2', 'BRV3', 'BTCK', 'CHDV', 'CHPV', 'DEMN', 'DMDV', 'EFM2', 'FAG2', 'GAIS', 'GDV2', 'GPR2', 'GRBN', 'GSTL', 'GTCN', 'GU29', 'HOL2', 'HVNY', 'ISTR', 'IVAN', 'JOE2', 'KADU', 'KIM2', 'KLPN', 'KMNG', 'KNGS', 'KOND', 'KRNS', 'KRS2', 'KRV2', 'KSCY', 'KSTM', 'KTLS', 'KVS1', 'KVS2', 'KZML', 'LBT2', 'LDNP', 'LDPL', 'LHSL', 'LMNS', 'LSKR', 'LUBN', 'LUGA', 'MCHR', 'MDVG', 'MG36', 'MLVS', 'MRL2', 'MRMN', 'MRVO', 'MS25', 'MSHN', 'MSNS', 'MTLS', 'NBLC', 'NNMK', 'NSRT', 'NVGD', 'NZYA', 'OKLV', 'OLN2', 'OPCK', 'ORLV', 'OSMN', 'OST2', 'PDDR', 'PDPR', 'PEST', 'PRHV', 'PRM2', 'PRMR', 'PRNS', 'PROZ', 'PRVM', 'PRZR', 'PSHA', 'PSKO', 'PSTS', 'PTKR', 'PTR2', 'PULK', 'ROM2', 'RSCH', 'RSUR', 'SBNS', 'SBOR', 'SEBE', 'SGJA', 'SGOZ', 'SL55', 'SLCY', 'SLNC', 'SLNG', 'SRT2', 'SSNV', 'SSTR', 'STKR', 'STNS', 'STRS', 'SUO2', 'SVRS', 'TCNP', 'THV2', 'TOIL', 'TRG2', 'TRLV', 'TSN3', 'UGTS', 'USLG', 'USTG', 'USVT', 'VAL2', 'VBR2', 'VIR2', 'VJG2', 'VLGD', 'VLH2', 'VLHV', 'VLK2', 'VLS2', 'VNNC', 'VNV2', 'VSVL', 'VVLC', 'VZSN', 'ZBTY', 'ZHUK', 'ZLNG'])\n",
-      "************************************\n",
-      "'AGLT' =  {'rtcm_id': 1015, 'antenna': {'manufacturer': 'Trimble', 'model': 'TRM57971.00 NONE', 'serial number': '30569147'}, 'receiver': {'manufacturer': 'Trimble', 'model': 'TRIMBLE NETR5', 'serial number': '4624K01633', 'code': '4.48'}, 'status': {'is_active': True, 'date': '17.08.22', 'time': '04:42:28'}, 'position': {'B': 60.206629058333334, 'L': 30.254086430555557, 'H': 84.554, 'coordinate system': 'ITRF2008 2013.05.23'}}\n",
-      "************************************\n",
-      "'AGLT' position =  {'B': 60.206629058333334, 'L': 30.254086430555557, 'H': 84.554, 'coordinate system': 'ITRF2008 2013.05.23'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -433,11 +409,11 @@
     "> Функция возвращает:\n",
     "* ```A``` - матрицу частных производных\n",
     "```python\n",
-    "[[0, 1, x_1 * sin(Theta_0) - y_1 * cos(Theta_0)],\n",
-    " [1, 0, x_1 * cos(Theta_0) - y_1 * sin(Theta_0)],\n",
+    "[[1, 0, x_1 * sin(Theta_0) - y_1 * cos(Theta_0)],\n",
+    " [0, 1, x_1 * cos(Theta_0) - y_1 * sin(Theta_0)],\n",
     " ....................................\n",
-    " [0, 1, x_n * sin(Theta_0) - y_n * cos(Theta_0)],\n",
-    " [1, 0, x_n * cos(Theta_0) - y_n * sin(Theta_0)]\n",
+    " [1, 0, x_n * sin(Theta_0) - y_n * cos(Theta_0)],\n",
+    " [0, 1, x_n * cos(Theta_0) - y_n * sin(Theta_0)]\n",
     "]\n",
     "```"
    ]
@@ -468,7 +444,7 @@
     " ```python\n",
     "def get_l(points_0, points, T_0):\n",
     "    \"Ваш код\"\n",
-    "    return A\n",
+    "    return L\n",
     "```\n",
     "> Функция на вход принимает:\n",
     "* ```points_0``` - cписок координат точек (можно сразу передавать массив из ```numpy```) в \"целевой\" системе координат:\n",
